# winrt-midi-test

./: .gitignore  CMakeLists.txt  README.md
Source/: Main.cpp  MainComponent.h
